--- a/Tii.html
+++ b/Tii.html
@@ -20,7 +20,7 @@
             />
             <h3 class="title"><a href="Tii.html">Jakarta</a></h3>
             <nav>
-              <a href="peta.html">Peta</a>
+              <a href="peta.html">Struktur</a>
               <a href="kontak.html">Kontak</a>
               <a href="seja.html">Sejarah</a>
             </nav>
