--- a/peta.html
+++ b/peta.html
@@ -1,38 +1,112 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="main.js">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="main.js" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://kit.fontawesome.com/f90068558c.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/f90068558c.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Peta</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="header peta">
-            <img
-              class="header-icon"
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Coat_of_arms_of_Jakarta.svg/800px-Coat_of_arms_of_Jakarta.svg.png"
-              alt=""
-            />
-            <h3 class="title"><a href="Tii.html">Jakarta</a></h3>
-            <nav>
-              <a href="peta.html">Peta</a>
-              <a href="kontak.html">Kontak</a>
-              <a href="seja.html">Sejarah</a>
-            </nav>
-          </div>
+      <div class="header peta">
+        <img
+          class="header-icon"
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Coat_of_arms_of_Jakarta.svg/800px-Coat_of_arms_of_Jakarta.svg.png"
+          alt=""
+        />
+        <h3 class="title"><a href="Tii.html">Jakarta</a></h3>
+        <nav>
+          <a href="peta.html">Struktur</a>
+        </nav>
+      </div>
     </header>
     <main>
-        <div>
-        <h1 class="koti">
-            Peta Kota Jakarta
-        </h1>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253840.49136891466!2d106.66435550988594!3d-6.229720820331571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f3e945e34b9d%3A0x5371bf0fdad786a2!2sJakarta%2C%20Daerah%20Khusus%20Ibukota%20Jakarta!5e0!3m2!1sid!2sid!4v1721466061787!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+      <div>
+        <h1 class="koti">Peta Kota Jakarta</h1>
+        <div
+          data-aos="fade-zoom-in"
+          data-aos-easing="ease-in-back"
+          data-aos-delay="300"
+          data-aos-offset="0"
+          class="mp"
+        >
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253840.49136891466!2d106.66435550988594!3d-6.229720820331571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f3e945e34b9d%3A0x5371bf0fdad786a2!2sJakarta%2C%20Daerah%20Khusus%20Ibukota%20Jakarta!5e0!3m2!1sid!2sid!4v1721466061787!5m2!1sid!2sid"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </div>
+      <div data-aos="flip-down" class="pjj">
+        <h1>Penanggung Jawab setiap daerah</h1>
+        <div class="gg">
+          <img
+            class="ketua"
+            src="https://ppid.jakarta.go.id/assets/home/img/gubernur_heru_budi_hartono.png"
+            alt=""
+          />
+          <h1>Gubernur Jakarta</h1>
+          <p>Heru Budi Hartono</p>
+          <div data-aos="flip-up" class="rrr">
+            <img
+              class="ketua"
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Wali_Kota_Ali_Maulana_Hakim_%28cropped%29.jpg/1200px-Wali_Kota_Ali_Maulana_Hakim_%28cropped%29.jpg"
+              alt=""
+            />
+            <h1>Walikota Jakarta Utara</h1>
+            <p>ALim Maulana Hakim</p>
+            <img
+              class="ketua"
+              src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Uus_Kuswanto.jpg"
+              alt=""
+            />
+            <h1>Walikota Jakarta Barat</h1>
+            <p>Uus Kuswanto</p>
+            <img
+              class="ketua"
+              src="https://upload.wikimedia.org/wikipedia/commons/7/7b/Wali_Kota_Jakarta_Selatan_Munjirin.jpg"
+              alt=""
+            />
+            <h1>Walikota Jakarta Selatan</h1>
+            <p>Munjirin</p>
+            <img
+              class="ketua"
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Wali_Kota_Jakarta_Timur_M._Anwar.jpg/330px-Wali_Kota_Jakarta_Timur_M._Anwar.jpg"
+              alt=""
+            />
+            <h1>Walikota Jakarta Timur</h1>
+            <p>M.Anwar</p>
+            <img
+              class="ketua"
+              src="https://upload.wikimedia.org/wikipedia/commons/b/bf/Wali_Kota_Jakarta_Pusat.jpg"
+              alt=""
+            />
+            <h1>Walikota Jakarta Pusat</h1>
+            <p>Dhany Sukma</p>
+            <img
+              class="ketua"
+              src="https://pulauseribu.jakarta.go.id/foto/pejabat/junaedi.jpg"
+              alt=""
+            />
+            <h1>Walikota Kepulauan Seribu</h1>
+            <p>Junaedi</p>
+          </div>
+        </div>
+      </div>
     </main>
-</body>
+  </body>
+  <script>
+    AOS.init();
+  </script>
 </html>
