--- a/peta.html
+++ b/peta.html
@@ -24,6 +24,8 @@
         <h3 class="title"><a href="Tii.html">Jakarta</a></h3>
         <nav>
           <a href="peta.html">Struktur</a>
+          <a href="kontak.html">Kontak</a>
+          <a href="seja.html">Sejarah</a>
         </nav>
       </div>
     </header>
@@ -104,6 +106,19 @@
         </div>
       </div>
     </main>
+    <footer>
+      <div class="main-footer">
+        <h3 class="info-top">Jakarta Kota Kolaborasi</h3>
+        <div class="social-media">
+          <i class="fab fa-instagram-square"></i>
+          <i class="fab fa-whatsapp-square"></i>
+          <i class="fas fa-envelope"></i>
+        </div>
+        <p class="info-center">
+          Copyright &copy; 2024. Gregory Gladwin
+        </p>
+      </div>
+    </footer>
   </body>
   <script>
     AOS.init();
