--- a/seja.html
+++ b/seja.html
@@ -21,7 +21,7 @@
           src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Coat_of_arms_of_Jakarta.svg/800px-Coat_of_arms_of_Jakarta.svg.png"
           alt=""
         />
-        <h3 class="title"><a href="Tii.html">Jakarta</a></h3>
+        <h3 class="title"><a href="index.html">Jakarta</a></h3>
         <nav>
           <a href="peta.html">Struktur</a>
           <a href="kontak.html">Kontak</a>
@@ -29,42 +29,73 @@
         </nav>
       </div>
     </header>
+
     <main>
-      <img
-        class="dbb"
-        src="https://asset-2.tstatic.net/wartakota/foto/bank/images/asal-usul-kota-dki-jakarta22.jpg"
-        alt=""
-      />
-      <h1 class="wke">Sejarah Jakarta</h1>
-      <p class="batv">
-        Sebelum menjadi nama "Jakarta",nama ini sudah diganti sebanyak 4 kali.
-        Mulai dari Sunda Kelapa(397-1527),Jayakarta
-        <br />(1527-1619),Batavia(1619-1942),Djakarta Tokubetu Si, Hepburn:
-        Jakaruta tokubetsushi(1942—1945) dan terakhir Jakarta (1945 - sekarang)
-      </p>
-    </main>
-    <div>
+      <div class="sejarah-center">
+        <img
+          src="https://asset-2.tstatic.net/wartakota/foto/bank/images/asal-usul-kota-dki-jakarta22.jpg"
+          alt=""
+        />
+        <h1>Sejarah Jakarta</h1>
+        <p>
+          Sebelum menjadi nama "Jakarta",nama ini sudah diganti sebanyak 4 kali.
+          Mulai dari Sunda Kelapa(397-1527),Jayakarta
+          <br />(1527-1619),Batavia(1619-1942),Djakarta Tokubetu Si, Hepburn:
+          Jakaruta tokubetsushi(1942—1945) dan terakhir Jakarta (1945 -
+          sekarang)
+        </p>
+      </div>
       <article id="scratch-project">
         <div class="project-detail">
           <div class="project-img">
             <img
               data-aos="zoom-out-right"
-              src="https://imgx.parapuan.co/crop/0x0:0x0/x/photo/2023/12/30/istock-1545758924jpg-20231230093500.jpg"
+              src="https://elshinta.com/asset/upload/article/2022/maret/3550_ELSHINTADOTCOM_20220302_unnamed_(2).png"
             />
           </div>
 
           <div data-aos="zoom-out-up" class="project-description">
-            <h3>Monumen Nasioanal (Monas)</h3>
+            <h3>Jakarta Sebelum Merdeka</h3>
             <p>
-              Monas didirikan untuk mengenang perlawanan dan perjuangan rakyat
-              Indonesia dalam merebut kemerdekaan dari pemerintahan kolonial
-              Kerajaan Belanda. Pembangunan dimulai pada 17 Agustus 1961 di
-              bawah perintah Presiden Soekarno dan diresmikan hingga dibuka
-              untuk umum pada 12 Juli 1975 oleh Presiden Soeharto.
+              Abad ke-14, bernama Sunda Kalapa dan menjadi pusat pelabuhan kerajaan Padjadjaran. <br>
+22 Juni 1527, penyerangan pangeran Fatahillah ke Sunda Kalapa dan berubah nama  menjadi Jayakarta.<br>
+4 Maret 1621, Belanda mulai mendirikan pemerintahan kolonial dan menamakannya Stad Batavia.<br>
+1 April 1905, pemerintah kolonial Belanda merubah nama menjadi Gemeente Batavia.<br>
+8 Januari 1935, pemerintah kolonial Belanda merubah nama menjadi Stad Gemeente Batavia.<br>
+8 Agustus 1942, pasukan Jepang tiba di Batavia dan merubah namanya menjadi Jakarta Tokubetsu Shi.
             </p>
           </div>
         </div>
       </article>
-    </div>
+
+      <article id="scratch-project">
+        <div class="project-detail">
+          <div class="project-img">
+            <img
+              data-aos="zoom-out-right"
+              src="https://lh5.googleusercontent.com/Zp9IXSq3CSVMgfZmSh1SkSTM3687IshTf3B-_WBisGTVfIX3ckSO0JiBcPQfXS0VMSf8RwqMHFgXCf3dNvu7CxFiZh9skZpOBZKKTBW6inCQ9fXh_JueY5uTpGmgKRQ0U-W-wZU"
+            />
+          </div>
+
+          <div data-aos="zoom-out-up" class="project-description">
+            <h3>Jakarta Setelah Merdeka</h3>
+            <p>
+              September 1945, Jakarta menjadi pusat politik dan pemerintahan Indonesia dengan nama Pemerintah Nasional Kota Jakarta. <br>
+              28 Maret 1950, Pemerintah RI merubah nama Jakarta menjadi Praj’a Jakarta.<br>
+              22 Juni 1956, Wali Kota Jakarta kembali mengukuhkan nama menjadi Jakarta.<br>
+              18 Januari 1958, Jakarta menjadi daerah otonom dengan nama Kotamadya Djakarta Raya yang berada di bawah Provinsi Jawa Barat.<br>
+              1959, Jakarta berubah statusnya menjadi Daerah Tingkat Satu (Provinsi) yang dipimpin Gubernur.<br>
+              1961, Status Jakarta dari Daerah Tingkat Satu kembali diubah menjadi Daerah Khusus Ibu Kota (DKI).<br>
+              31 Agustus 1964, Ibu Kota Jakarta Raya resmi menjadi Ibu Kota Negara Republik Indonesia dengan nama Jakarta.<br>
+              31 Agustus 1999, status Jakarta kemudian diperbarui menjadi pemerintah provinsi sesuai dengan Undang-Undang Nomor 34 Tahun 1999 tentang Pemerintahan Propinsi Daerah Khusus Ibukota Negara Republik Indonesia Jakarta dengan status otonomi yang memiliki kota administrasi.<br>
+              30 Juli 2007, Melalui Undang-Undang Nomor 29 Tahun 2007 tentang Pemerintah Provinsi Daerah Khusus Ibuokta Jakarta sebagai Ibukota Negara Kesatuan Republik Indonesia, Jakarta berganti nama menjadi DKI Jakarta serta mengukuhkan status sebagai daerah otonomi khusus ibukota.
+            </p>
+          </div>
+        </div>
+      </article>
+    </main>
   </body>
+  <script>
+    AOS.init();
+  </script>
 </html>
