--- a/peta.html
+++ b/peta.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     ></script>
     <title>Peta</title>
+    <script src="https://unpkg.com/feather-icons"></script>
   </head>
   <body>
     <header>
@@ -21,7 +22,7 @@
           src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Coat_of_arms_of_Jakarta.svg/800px-Coat_of_arms_of_Jakarta.svg.png"
           alt=""
         />
-        <h3 class="title"><a href="Tii.html">Jakarta</a></h3>
+        <h3 class="title"><a href="index.html">Jakarta</a></h3>
         <nav>
           <a href="peta.html">Struktur</a>
           <a href="kontak.html">Kontak</a>
@@ -30,8 +31,12 @@
       </div>
     </header>
     <main>
-      <div class="w3-display-container w3-content w3-wide container-maps" style="max-width:1500px;" id="home">
-          <h1>Peta Jakarta</h1>
+      <div
+        class="w3-display-container w3-content w3-wide container-maps"
+        style="max-width: 1500px"
+        id="home"
+      >
+        <h1>Peta Jakarta</h1>
         <div
           data-aos="fade-zoom-in"
           data-aos-easing="ease-in-back"
@@ -110,16 +115,17 @@
       <div class="main-footer">
         <h3 class="info-top">Jakarta Kota Kolaborasi</h3>
         <div class="social-media">
-          <i class="fab fa-instagram-square"></i>
-          <i class="fab fa-whatsapp-square"></i>
-          <i class="fas fa-envelope"></i>
+          <i data-feather="instagram"></i>
+          <i data-feather="mail"></i>
+          <i data-feather="phone"></i>
         </div>
-        <p class="info-center">
-          Copyright &copy; 2024. Gregory Gladwin
-        </p>
+        <p class="info-center">Copyright &copy; 2024. Gregory Gladwin</p>
       </div>
     </footer>
   </body>
+  <script>
+    feather.replace();
+  </script>
   <script>
     AOS.init();
   </script>
